--- a/知识点.md
+++ b/知识点.md
@@ -1383,7 +1383,7 @@ npm run dev 开启server
 # 20170525
 ## webpack   构建工具
 ### 安装webpack  
-- 全局安装  可以在cmd中使用
+- 全局安装  可以在cmd中使用  默认支持node模块化
 ```
 nmp install webpack -g 
 ```
@@ -1474,6 +1474,60 @@ module.exports = {
     }
 };
 ```
+
+## ES6导入导出
+```
+- ES6导出
+
+导出1：
+export {
+    say
+}
+导出2:
+export default{
+    say
+}
+
+- ES6导入 
+
+导入1：
+import {say} from "./public/b.js"
+如果导入的函数名称与当前页面的函数重名，可以按照以下方法书写
+    import {say as 别名} from "./public/b.js"
+导入2：
+import 自定义名（Hello） from "./public/b.js"
+
+
+```
+
+- 解析ES6写法的代码  babel加载器
+```
+npm install babel-core babel-loader -D
+```
+
+- 新建.babelrc文件，让babel来处理解析ES6，文件中需要es2015   (将es6写法转换为es5)
+```
+npm install babel-preset-es2015 -D
+```
+## Vue引入问题
+- 通过npm install导入的vue文件，模块化默认导入的是运行时构建文件，没有模板编译功能，会报错
+- 解决方法1：通过rander函数
+- 解决方法2：在webpack配置文件中添加以下代码，会将默认导入的文件指向新文件
+```
+resolve: {
+  alias: {
+    'vue$': 'vue/dist/vue.common.js'
+  }
+}
+```
+- 解决办法3：导入时找需要的路径，但不推荐
+
+## webpack解析vue单文件组件
+```
+npm i vue-loader -D     指定vue加载器,为了让webpack编译解析vue单文件组件
+npm i vue-template-compiler -D  
+```
+
 
 
 
