--- a/知识点.md
+++ b/知识点.md
@@ -1420,8 +1420,8 @@ webpack
 ```
 "scripts": {
     //通过webpack-dev-server自动打开默认浏览器，时时监控外部文件的变化
-    "dev":"webpack-dev-server --open --hot" ,  ---- 开发阶段
-    "build":"webpack --progress --hide-modules"  ---- 生产阶段
+    "dev":"webpack-dev-server --open --hot" ,  ---- 开发阶段  npm run dev
+    "build":"webpack --progress --hide-modules"  ---- 生产阶段 npm run build
 },
 ```
 
@@ -1529,5 +1529,436 @@ npm i vue-template-compiler -D
 ```
 
 
+# 20170531
+
+## webpack
+
+```
+webpack 
+-w   实时监听编译，但是不会自动更新页面
+--progress  显示进程
+--hide-modules  隐藏模块信息
+```
+
+## webpack-dev-server
+```
+webpack-dev-server --progress --open --port 8090 
+--progress          显示编译进程
+--open              自动打开浏览器预览
+--port 8090         自定义端口好，默认是8080
+--hot               热替换
+```
+
+## ES6问题
+- 1，借助babel进行转码   将es6转换为es5
+```
+npm install babel-core babel-loader -D
+```
+
+- 2，准备es2015插件  预设插件包
+```
+npm install babel-preset-es2015 -D
+```
+- 3，准备.babelrc文件,文件内容如下
+```
+{
+  "presets":["es2015"]
+}
+```
+- 4，在webpack配置文件中设置需要通过哪些加载器来匹配文件 webpack.config.js
+
+```
+module.exports = {
+    entry:{
+        main:"./src/index.js"
+    },
+    output:{
+        path:path.resolve(__dirname,"./dist"),
+        publicPath:"/dist/",
+        filename:"[name].js"
+    },
+    module:{//加载规则配置
+        rules:[
+            {
+                //将es6转化成es5
+                test:/\.js$/,//匹配的文件
+                loader:"babel-loader",//通过什么加载器进行匹配
+                exclude:"/node_modules/" //排除哪些文件
+            }
+        ]
+    }
+};
+```
+- 5，指定草案阶段
+```
+npm install babel-preset-stage-0 -D
+```
+- 6，配置.babelrc
+```
+"presets":["es2015","stage-0"]
+```
 
 
+## source map
+- 除错工具直接显示原文件代码，不会显示编译后的代码,生成一个sourcemap文件，存储编译前代码位置信息，便于在原文件中调试
+```
+devtool:"#eval-source-map" //记录编译之前的代码对应位置
+```
+
+## vue包引用问题
+- 默认 NPM 包导出的是 运行时 构建。为了使用独立构建，在 webpack 配置中添加下面的别名
+```
+resolve: {
+  alias: {
+    'vue$': 'vue/dist/vue.common.js'
+  }
+}
+```
+
+## .vue单文件组件使用问题 
+- 处理vue单文件组件需要借助 vue-loader  
+```
+npm install vue-loader -D
+```
+- 在webpack配置文件中配置一下规则
+```
+{
+    test:/\.vue$/,//匹配所有vue单文件组件
+    loader:"vue-loader" //通过什么加载器进行匹配
+}
+```
+
+## vue模板编译问题
+- vue-loader 依赖的vue模板编译模块
+```
+npm install vue-template-compiler -D
+```
+
+## css渲染问题
+- 先依赖css-loader，其次需要将css样式内嵌在标签中 style-loader
+```
+npm install css-loader -D
+npm install style-loader -D
+```
+- 在webpack中配置规则
+```
+{
+    test:/\.css$/,
+    loader:"style-loader!css-loader"//先处理后面的加载器，再处理前面的
+    //style-loader 将css样式内嵌在html页面中
+    //多个loader中间用！隔开，或者用数组
+    //loader:["style-loader","css-loader"]
+}
+```
+
+## 使用less写css样式问题
+- 安装less与less加载器
+```
+npm install less less-loader -D
+```
+- 在webpack中配置规则  既可以控制外部less文件，有可以控制.vue单文件组件中的less规范的css样式
+```
+{
+    test:/\.less$/,
+    loader:"style-loader!css-loader!less-loader"
+}
+```
+
+## 加载图片问题
+- 安装file-loader或者url-loader   url-loader可以将图片转换为base64格式的
+```
+npm install file-loader -D 或
+npm install url-loader -D
+```
+- 在webpack中配置规则
+```
+{
+    test:/\.(jpe?g|png|gif|svg)$/,
+    loader:"file-loader"
+}
+```
+- 或
+```
+{
+    test:/\.(jpe?g|png|gif|svg)$/,
+    loader:"url-loader",
+    options:{
+        limit:10000, //限制图片,10kb以下，进行base64编码，否则正常显示
+        name:"[name].[ext]?[hash]" //重写文件名
+    }
+}
+```
+
+## 使用bootstrap ui组件问题
+- 安装bootstrap
+```
+npm install bootstrap -S
+```
+- 在index.js中导入bootstrap
+- 在webpack中修改默认指定文件  地址指向css文件
+```
+resolve:{
+    alias:{
+        "vue$":"vue/dist/vue.common.js",   //导入独立构建文件
+        "bootstrap$":"bootstrap/dist/css/bootstrap.css"
+    }
+}
+```
+
+- 报错eot woff2 woff ttf字体图标找不到
+```
+{
+    test:/\.(jpe?g|png|gif|svg|eot|woff2|woff|ttf)$/,
+    loader:"url-loader",
+    options:{
+        limit:10000, //限制图片,10kb以下，进行base64编码，否则正常显示
+        name:"[name].[ext]?[hash]" //重写文件名
+    }
+}
+```
+
+## 完整的filename格式问题 [name].[hash].js   
+- webpack.config.js hash值是随机的，为了防止缓存 ,但是文件名称只要改变，index.html中路径就要修改
+```
+output:{
+    path:path.resolve(__dirname,"./dist"),
+    publicPath:"/dist/",
+    //filename:"[name].js"
+    filename:"[name].[hash].js" //添加hash值，值是随机的,为了避免缓存
+}
+```
+- webpack.config.js 需要借助webpack插件 html-webpack-plugin
+```
+let HtmlWebpackPlugin = require("html-webpack-plugin");//自动生成html文件，针对单入口文件
+
+plugins:[ //webpack plugin
+    new HtmlWebpackPlugin({
+        title:"hello zhs",  //生成的html页面title
+        favicon:'./src/assets/logo.png',    //生成页卡图标
+        template:"./index.html",     //指定html模板
+        chunks:["main"], //指定依赖的js模块
+        inject:"head"  //将依赖的文件存放位置,放在head标签里，默认是存放在body中
+    })
+]
+```
+
+
+## 公共模块问题(将使用率较高的模块提取出来，只打包一次)
+- 依赖第三方模块 webpack.config.js
+```
+let webpack = require("webpack");
+
+```
+- webpack.config.js 配置插件参数
+```
+plugins:[ //webpack plugin
+    new HtmlWebpackPlugin({
+        title:"hello zhs", //生成的html页面title
+        favicon:'./src/assets/logo.png', //生成页卡图标
+        template:"./index.html", //指定html模板
+        //chunks:["main"], //指定依赖 -- 单文件入口，默认名称main
+        chunks:["common","chunk1","chunk2"]   //-- 多文件入口 ,添加入口名称即可
+        //inject:"head"  //将依赖的文件存放位置,放在head标签里，默认是存放在body中
+    }),
+    new webpack.optimize.CommonsChunkPlugin("common") //用来提取多入口中的公共模块
+    //如果common文件是动态生成的，需要在chunks中将common放在最前面，否则会报错
+    //如果不是动态生成的，就直接在html页面引入即可 <script src="common.js"></script>
+]
+```
+
+## css样式单独打包问题  -- 可以将外部css样式与less外部文件打包到一个文件，单文件组件的样式无法打包
+- 依赖第三方模块
+```
+npm i extract-text-webpack-plugin -D
+```
+
+- webpack.config.js 导入第三方模块
+```
+let ExtractTextPlugin = require("extract-text-webpack-plugin");//将css单独打包
+```
+
+- webpack.config.js 修改loader加载器中配置
+```
+{
+    test:/\.css$/,
+    loader:ExtractTextPlugin.extract({use:"css-loader"})
+},
+{
+    test:/\.less$/,
+    loader:ExtractTextPlugin.extract({use:"css-loader!less-loader"})
+}
+```
+- webpack.config.js 在plugin中
+```
+new ExtractTextPlugin("index.css") //指定一下打包之后的文件名称
+```
+
+## 文件压缩问题 - 通常是生产后使用
+- 在配置文件中，plugin中 将js文件压缩 webpack核心模块提供的压缩方法
+```
+new webpack.optimize.UglifyJsPlugin({ 
+    sourceMap:true, //保留代码压缩编译前的位置
+    compress:{
+        warnings:false  //删除调试语句
+    }
+}) 
+```
+
+## 区分开发环境问题
+- 安装cross-env
+```
+npm install cross-env -D
+```
+- package.json修改
+```
+"scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+}
+```
+- webpack.config.js配置判断环境，进行压缩文件
+```
+if(process.env.NODE_ENV==="production"){//生产环境下
+    console.log("this is production!!!");
+    module.exports.plugins = (module.exports.plugins||[]).concat([
+        new webpack.optimize.UglifyJsPlugin({
+            sourceMap:true, //保留代码压缩编译前的位置
+            compress:{
+                warnings:false  //删除调试语句
+            }})
+    ]);
+}else{
+    console.log("this is development!!!");
+}
+```
+
+## 省略扩展名问题
+- 配置文件添加
+```
+resolve:{
+    alias:{
+        "vue$":"vue/dist/vue.common.js", 
+        "bootstrap$":"bootstrap/dist/css/bootstrap.css"
+    },
+    extensions:[".js",".css",".vue",".less"]//将文件后缀名称放进数组中
+}
+```
+- 可以将导入的文件的后缀名去掉
+```
+import Vue from "vue"
+import Hello from "./components/hello"
+import "./public/index"
+import "./public/hello"
+```
+
+## webpack.config.js 20170531完整版
+```
+let path = require("path");
+let webpack = require("webpack");
+let HtmlWebpackPlugin = require("html-webpack-plugin");//自动生成html文件，针对单入口文件
+let ExtractTextPlugin = require("extract-text-webpack-plugin");//将css单独打包
+
+module.exports = {
+    //entry:"./src/index.js",
+    entry:{
+        chunk1:"./src/index.js",
+        chunk2:"./src/main2.js"
+    },
+    output:{
+        path:path.resolve(__dirname,"./dist"),
+        // publicPath:"/dist/",
+        //filename:"[name].js"
+        filename:"[name].[hash].js" //添加hash值，值是随机的,为了避免缓存
+    },
+    module:{//加载规则配置
+        rules:[
+            //将es6转化成es5
+            {
+                test:/\.js$/,//匹配所有js文件
+                loader:"babel-loader",//通过什么加载器进行匹配
+                exclude:"/node_modules/" //排除哪些文件
+            },
+            {
+                test:/\.vue$/,//匹配所有vue单文件组件
+                loader:"vue-loader" //通过什么加载器进行匹配
+            },
+            // {
+            //     test:/\.css$/,
+            //     loader:"style-loader!css-loader"//先处理后面的加载器，再处理前面的
+            //     //style-loader 将css样式内嵌在html页面中
+            //     //多个loader中间用！隔开，或者用数组
+            //     //loader:["style-loader","css-loader"]
+            // },
+            {
+                test:/\.css$/,
+                loader:ExtractTextPlugin.extract({use:"css-loader"})
+            },
+            // {
+            //     test:/\.less$/,
+            //     loader:"style-loader!css-loader!less-loader"
+            // },
+            {
+                test:/\.less$/,
+                loader:ExtractTextPlugin.extract({use:"css-loader!less-loader"})
+            },
+            {
+                test:/\.(jpe?g|png|gif|svg|eot|woff2|woff|ttf)$/,
+                loader:"url-loader",
+                options:{
+                    limit:10000, //限制图片,10kb以下，进行base64编码，否则正常显示
+                    name:"[name].[ext]?[hash]" //重写文件名
+                }
+            }
+        ]
+    },
+    //生成一个sourcemap文件，存储编译前代码位置信息，便于在原文件中调试
+    devtool:"#eval-source-map", //记录编译之前的代码对应位置
+    //默认 NPM 包导出的是 运行时 构建。为了使用独立构建，在 webpack 配置中添加下面的别名
+    resolve:{
+        alias:{
+            "vue$":"vue/dist/vue.common.js",   //导入独立构建文件
+            "bootstrap$":"bootstrap/dist/css/bootstrap.css"
+        },
+        extensions:[".js",".css",".vue",".less"]//将文件后缀名称放进数组中
+    },
+    //配置devServer
+    devServer:{
+        noInfo:true, // 隐藏编译信息
+        //hot:true// 热替换可以在配置文件中设置，但是需要配合 new webpack.HotModuleReplacementPlugin()使用
+    },
+    plugins:[ //webpack plugin
+        new HtmlWebpackPlugin({
+            title:"hello zhs", //生成的html页面title
+            favicon:'./src/assets/logo.png', //生成页卡图标
+            template:"./index.html", //指定html模板
+            //chunks:["main"], //指定依赖 -- 单文件入口，默认名称main
+            //chunks:["chunk1","chunk2"],  -- 非动态生成的common文件
+            chunks:["common","chunk1","chunk2"]   //-- 多文件入口 ,添加入口名称即可
+            //inject:"head"  //将依赖的文件存放位置,放在head标签里，默认是存放在body中
+        }),
+        new webpack.optimize.CommonsChunkPlugin("common"), //用来提取多入口中的公共模块
+        //如果common文件是动态生成的，需要在chunks中将common放在最前面，否则会报错
+        //如果不是动态生成的，就直接在html页面引入即可 <script src="common.js"></script>
+        new ExtractTextPlugin("index.css"), //将css单独打包，指定一下打包之后的文件名称
+        // new webpack.optimize.UglifyJsPlugin({
+        //     sourceMap:true, //保留代码压缩编译前的位置
+        //     compress:{
+        //         warnings:false  //删除调试语句
+        //     }
+        // }) //将js文件压缩 webpack核心模块提供的压缩方法
+    ]
+};
+if(process.env.NODE_ENV==="production"){//生产环境下
+    console.log("this is production!!!");
+    module.exports.plugins = (module.exports.plugins||[]).concat([
+        new webpack.optimize.UglifyJsPlugin({
+            sourceMap:true, //保留代码压缩编译前的位置
+            compress:{
+                warnings:false  //删除调试语句
+            }})
+    ]);
+}else{
+    console.log("this is development!!!");
+}
+```
