react and redux

--- a/知识点.md
+++ b/知识点.md
@@ -2377,11 +2377,11 @@ Person.propTypes = {
   name:React.PropTypes.string.isRequired
 }
 let props = {age:8,name:9};
-ReactDOM.render(<Person {...props}/>,document.getElementById('root'));
+ReactDOM.render(<Person {props}/>,document.getElementById('root'));
 ```
 
 ### 表单元素双向数据绑定
-> 注意: 如果给表单元素设置了value属性，则必须指定onChange事件处理函数，否则 此字段会变成只读状态
+- 注意: 如果给表单元素设置了value属性，则必须指定onChange事件处理函数，否则 此字段会变成只读状态
 ```
 class Input extends React.Component{
      constructor(props){
@@ -2508,13 +2508,13 @@ export default class Calculator extends React.Component{
 7. 组件接受到新的属性 componentWillReceiveProps
 8. 组件将要被删除      componentWillUnmount
 > 执行顺序：父组件加载前 子组件加载前 子组件加载后 父组件加载后 父组件将要卸载 子组件将要卸载
+
 ```
 import React from 'react';
 import ReactDOM from 'react-dom'
-/**
- * 1.实例化组件类，并调用它的render方法得到虚拟DOM元素
- * 2.React将要把此虚拟DOM元素挂载到页面中
- */
+//1.实例化组件类，并调用它的render方法得到虚拟DOM元素
+//2.React将要把此虚拟DOM元素挂载到页面中
+
 export default class Counter extends React.Component {
     constructor(props){
         super(props);
@@ -2620,9 +2620,9 @@ let connect = require("gulp-connect");
 connect.server({
     port:8080, //端口号
     root:"./build"  //静态文件根目录
+    livereload:true //当源码发生修改后会自己刷新浏览器
 });
 ```
-
 - 直接加载所有的gulp插件  -- npm install gulp-load-plugins -S  
 ```
 let $ = require("gulp-load-plugins")();
@@ -2641,3 +2641,117 @@ gulp.task("css",function () {
 > * 匹配任意字符，除了路径分隔符      "./src/js/*.js"
 > ** 可以匹配任意字符，包括路径分隔符   "./src/**/*.js"
 > 注意：插件不支持es6语法
+
+- 在服务器上自动监控文件变化
+```
+let gulp = require("gulp");
+let $ = require("gulp-load-plugins")();
+gulp.task("serve",function () {
+    $.connect.server({
+        port:8080,
+        root:"./build",
+        livereload:true
+    });
+});
+gulp.task("html",function(){
+    gulp.src("./src/*.html").pipe(gulp.dest("./build")).pipe($.connect.reload());
+});
+gulp.task("watch",function () {
+    gulp.watch("./src/*.html",["html"]);
+});
+//组合任务，此数组是此依赖的任务，只有当依赖的任务全部执行完毕之后才会执行default任务
+gulp.task("default",["serve","watch"]);
+```
+
+## react-router
+### 生成项目
+```
+create-react-app react-router-4-lesson
+cd react-router-4-lesson
+yarn start
+```
+### 安装react-router-dom
+```
+npm install react-router-dom -S
+```
+### 配置基本路由
+```
+import React from 'react'
+import {
+    BrowserRouter as Router,
+    Route,
+    Link
+} from 'react-router-dom'
+
+const Home = () => (
+    <div>
+        <h2>首页</h2>
+    </div>
+)
+
+const User = () => (
+    <div>
+        <h2>用户管理</h2>
+    </div>
+)
+
+const Profile = () => (
+    <div>
+        <h3>个人设置</h3>
+    </div>
+)
+
+const App = () => (
+    <Router>
+        <div>
+            <ul>
+                <li><Link to="/">主页</Link></li>
+                <li><Link to="/user">用户管理</Link></li>
+                <li><Link to="/profile">个人设置</Link></li>
+            </ul>
+
+            <hr/>
+
+            <Route exact path="/" component={Home}/>
+            <Route path="/user" component={User}/>
+            <Route path="/profile" component={Profile}/>
+        </div>
+    </Router>
+)
+export default App
+```
+
+# 20170614
+##  exact
+- 严格匹配路径，不只匹配前缀
+```
+<Route exact path="/" render={props=><div>首页</div>} />
+<Route path="/:name" render={props=><div>{props.match.params.name}</div>} />
+<Route path="/home" component={Home} />
+<Route path="/user" component={User} />
+<Route path="/profile" component={Profile} />
+```
+## Switch
+- 匹配上一个即可，后面不继续匹配
+```
+import {
+    BrowserRouter as Router,  //容器
+    Route,   //一条路由
+    Link,
+    Switch
+} from "react-router-dom";
+<Switch>
+    <Route path="/" render={props=><div>首页</div>} />
+    <Route path="/:name" render={props=><div>{props.match.params.name}</div>} />
+    <Route path="/home" component={Home} />
+    <Route path="/user" component={User} />
+    <Route path="/profile" component={Profile} />
+</Switch>
+```
+### 路径参数
+- props对象下包含location match history
+- props.match.params.name  根据name匹配路径
+
+
+## redux
+- redux出现的目的:为了解决组件通信
